mobile view homepage

--- a/index.html
+++ b/index.html
@@ -58,32 +58,40 @@
       <section class="links">
         <div class="links__container">
           <figure class="links__image">
-            <img src="" alt="" />
+            <img src="images/appointment.webp" alt="book appointment" />
           </figure>
           <a href="">Book Appointment</a>
         </div>
         <div class="links__container">
           <figure class="links__image">
-            <img src="" alt="" />
+            <img src="images/appointment.webp" alt="book appointment" />
           </figure>
           <a href="">Schedule a Jobsite Walk</a>
         </div>
         <div class="links__container">
           <figure class="links__image">
-            <img src="" alt="" />
+            <img src="images/appointment.webp" alt="book appointment" />
           </figure>
           <a href="">Get a Quote</a>
         </div>
         <div class="links__container">
           <figure class="links__image">
-            <img src="" alt="" />
+            <img src="images/appointment.webp" alt="book appointment" />
           </figure>
           <a href="">Sit back and let us take care of things</a>
         </div>
       </section>
     </main>
     <footer class="footer">
+      <figure>
+        <img src="images/logo.webp" alt="">
+      </figure>
       <p>Copyright &copy; 2024</p>
+      <p>
+        <address>
+            Adress/contact
+        </address>
+      </p>
     </footer>
   </body>
 </html>
