finished About and Services Page (draft)

--- a/contact.html
+++ b/contact.html
@@ -6,7 +6,7 @@
     <meta name="author" content="Ammon Quarshie" />
     <meta
       name="description"
-      content="Landing page for One Touch Cleaning Services"
+      content="Contact page for One Touch Cleaning Services"
     />
     <link
       rel="shortcut icon"
@@ -14,7 +14,7 @@
       type="image/x-icon"
     />
     <link rel="stylesheet" href="css/style.css" />
-    <title>Home</title>
+    <title>Contact Us</title>
   </head>
   <body>
     <header class="header">
@@ -47,42 +47,6 @@
             alt="construction cleaning hero image"
           />
         </figure>
-      </section>
-      <article class="main__article">
-        <h2 class="main__h2">Welcome to One Touch Cleaning Services</h2>
-        <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium
-          explicabo quo perspiciatis esse eius magnam asperiores ipsam laborum
-          cumque aspernatur cum porro consequatur, suscipit laudantium rerum,
-          repellendus velit amet eum!
-        </p>
-      </article>
-
-      <section class="links">
-        <div class="links__container">
-          <figure class="links__image">
-            <img src="images/appointment.webp" alt="book appointment" />
-          </figure>
-          <a href="">Book Appointment</a>
-        </div>
-        <div class="links__container">
-          <figure class="links__image">
-            <img src="images/appointment.webp" alt="book appointment" />
-          </figure>
-          <a href="">Schedule a Jobsite Walk</a>
-        </div>
-        <div class="links__container">
-          <figure class="links__image">
-            <img src="images/appointment.webp" alt="book appointment" />
-          </figure>
-          <a href="">Get a Quote</a>
-        </div>
-        <div class="links__container">
-          <figure class="links__image">
-            <img src="images/appointment.webp" alt="book appointment" />
-          </figure>
-          <a href="">Sit back and let us take care of things</a>
-        </div>
       </section>
     </main>
     <footer class="footer">
